@@ -3,6 +3,7 @@
 	* makefile: shortend a bit, and disabled auto generation of 
 	api xml files
 	* api/makefile: Added installation target
+	* sample/makefile: Added installation target
 
 2003-09-13  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
